2008-07-19  Sergey Poznyakoff  <gray@gnu.org.ua>

	Minor fix.
	
	* mh/mhn.c (normalize_path): First arg is const char *.
	(store_handler): Avoid unnecessary allocations (and coredumps,
	if mhn-storage profile is not set.

	Finish namespace cleanup in libsieve.

	* libsieve/actions.c, libsieve/comparator.c, libsieve/conf.c,
	libsieve/load.c, libsieve/prog.c, libsieve/register.c,
	libsieve/relational.c, libsieve/require.c, libsieve/runtime.c,
	libsieve/sieve.h, libsieve/sieve.l, libsieve/sieve.y,
	libsieve/tests.c, libsieve/util.c: Prefix all external
	identifiers, that are not intended for use by application
	programs, with mu_sv_.
	
	Minor fixes.
	
	* NEWS, configure.ac: Raise version to 1.9.91
	* mail/mailline.c (ml_getc): Fix indentation.
	* mailbox/mime.c (mu_mime_get_part): Return MU_ERR_NOENT if part
	is out of range.

	Keep namespace clean
	
	* libsieve/comparator.c, libsieve/prog.c, libsieve/require.c,
	libsieve/runtime.c, libsieve/sieve.h, libsieve/sieve.l,
	libsieve/sieve.y, libsieve/util.c: Prefix instr_ functions with
	mu_.
	(sieve_filename, sieve_line_num): Removed.  Use new global
	mu_sieve_locus instead.

2008-07-04  Sergey Poznyakoff  <gray@gnu.org.ua>

	Fix converting RFC822 streams to messages.
	
	* mailbox/message_stream.c (_mu_rfc822_stream): New members
	envelope, and envelope_length.
	(_mu_rfc822_read, _mu_rfc822_readline, _mu_rfc822_size): Skip
	eventual envelope string.
	(_mu_rfc822_open): Save envelope.
	(_mu_rfc822_destroy): Free envelope.
	(restore_envelope): Use message envelope, if it is present.

2008-06-17  Sergey Poznyakoff  <gray@gnu.org.ua>

	* mailbox/header.c (header_readline): Revert yesterday's change.

2008-06-16  Sergey Poznyakoff  <gray@gnu.org.ua>

	* auth/ldap.c (chk_sha): Remove useless return.
	* mailbox/header.c (mu_hdrent_find_stream_pos): Check for
	hrd->tail != NULL.
	(header_readline): Return immediately if header size is 0.

2008-06-03  Sergey Poznyakoff  <gray@gnu.org.ua>
